--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -10,8 +10,10 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+  <script src="ng2-toastr.js"></script>
+
 </head>
-<body>
+<body class="container">
   <app-root></app-root>
 </body>
 </html>
