Find friends functionality added. Login, setup for rest

--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -13,7 +13,7 @@
   <script src="ng2-toastr.js"></script>
 
 </head>
-<body class="container">
+<body class="container-fluid">
   <app-root></app-root>
 </body>
 </html>
